<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="50dp"
            android:id="@+id/choiceback5"
            android:layout_height="50dp"
            app:srcCompat="@drawable/back"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="127dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/logo"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="130dp"
        android:drawableLeft="@drawable/username"
        android:hint="@string/username"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="110dp"
        android:drawableLeft="@drawable/email2"
        android:hint="@string/email"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/password_register"
        android:layout_width="131dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="130dp"
        android:drawableLeft="@drawable/password"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="155dp"
        android:background="@android:color/black"
        android:text="@string/save"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/white"/>
    </LinearLayout>
</RelativeLayout>