<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="50dp"
            android:id="@+id/choiceback6"
            android:layout_height="50dp"
            app:srcCompat="@drawable/back"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="115dp"
        app:srcCompat="@drawable/logo"/>

    <EditText
        android:id="@+id/login_email"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginLeft="115dp"
        android:layout_marginTop="40dp"
        android:drawableLeft="@drawable/username"
        android:hint="@string/email"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="131dp"
        android:layout_height="40dp"
        android:layout_marginLeft="142dp"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/password"
        android:hint="@string/password"
         />
    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="167dp"
        android:background="@android:color/black"
        android:text="@string/login"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/white"/>
    </LinearLayout>
</RelativeLayout>